@@ -216,6 +216,10 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Patch #1407135, bug #1424041: harmonize mmap behavior of anonymous memory.
+  mmap.mmap(-1, size) now returns anonymous memory in both Unix and Windows.
+  mmap.mmap(0, size) should not be used on Windows for anonymous memory.
+
 - Patch #1422385: The nis module now supports access to domains other
   than the system default domain.
 
